--- a/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html
+++ b/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html
@@ -105,18 +105,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -235,7 +239,8 @@ Chi phí dời nhà thì như nhau dù cho dời từ nhà thuê hay dời từ 
 Nhiều người vẫn nghĩ rằng giá cái nhà sẽ tăng. Tôi tin là giá đất sẽ tăng trong dài hạn nhưng giá nhà chung cư thì không chắc sẽ tăng. Trong một số giai đoạn ngắn hạn, giá nhà chung cư có tăng, có giảm. Chúng ta không thể vừa ở trong căn nhà chung cư vừa canh khi nào giá lên thì bán để có lời. Giữ nó để ở thì giá trị căn nhà chung cư trong dài hạn chỉ còn lại giá trị mười mấy mét vuông đất, vì giá trị xây dựng sẽ giảm dần về zero.
   <br>Ở nhà thuê còn tránh được các chi phí bảo trì căn nhà nữa, mọi hư hỏng đều được chủ nhà chi tiền sửa. Chưa kể đến việc đóng thêm tiền sửa chữa lớn cho phần công cộng của chung cư như là thang máy… Tất cả các khu chung cư mới xây sau năm 2000 đều có quỹ bảo trì, nhưng quỹ bảo trì đó rất mau hết ở nhiều nơi, và mỗi khi cần sửa chữa lớn thì sẽ tốn thêm tiền các chủ nhà. Khu chung cư lớn mà tôi đã ở đã tốn đến vài tỉ đồng để sơn lại tường hành lang mọi tầng, nếu sơn lại mặt ngoài cả khu chắc sẽ tốn gấp vài lần số đó.
   <br>Tóm lại, hãy chờ đến khi giá nhà rẻ hơn nữa rồi hãy mua.</p>
-  <p>Có thể dùng hàm FV trong spreadsheet để so sánh giữa hai phương án: thuê nhà hay mua nhà chung cư để ở. Trong hình này, nếu giá nhà chung cư tăng gấp ba sau 15 năm thì mua nhà để ở có lợi hơn. Nhưng như đã viết ở trên, nhà chung cư càng để lâu càng mất giá.</p>
+  <p>Có thể dùng hàm FV trong spreadsheet để so sánh giữa hai phương án: thuê nhà hay mua nhà chung cư để ở. Trong hình này, nếu giá nhà chung cư tăng gấp ba sau 15 năm thì mua nhà để ở có lợi hơn. Nhưng như đã viết ở trên, nhà chung cư càng để lâu càng mất giá.
+  <br>Một trường hợp thực tế: căn nhà 3 phòng ngủ trong khu chung cư tui ở tăng giá từ 2,3 tỷ lên 2,8 tỷ sau 8 năm, khó tăng được gấp ba sau 15 năm</p>
   <div><amp-img alt="Thuê nhà hay mua nhà" src="/images/mua-nha.jpg" height="537" width="637" layout="responsive"></amp-img></div>
   <p>Các bạn có thể dùng <a href="https://docs.google.com/spreadsheets/d/1GuzxytGto4BdpjUJc_YWI5M8u7PeLhYpmPoer_1Gli4/edit?usp=sharing" target='_blank'>file ở đây</a> để tự tính với các số của riêng bạn.</p>
 
