--- a/index.html
+++ b/index.html
@@ -102,18 +102,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -271,7 +275,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
         <div class="lrsp">
           <a href="kinh-nghiem/may-tinh/protect"><amp-img src="images/fidokey.png" layout="responsive" height="233" width="350" alt="FIDO keys"></amp-img></a>
           <div class="center"><h3>Bảo-vệ tài-sản-số</h3></div>
-          <p>Tìm-hiểu kỹ hơn về những loại tài-sản trong thời-đại số-hoá, những rủi-ro làm mất những tài-sản đó, và <a href="kinh-nghiem/may-tinh/protect">những cách bảo-vệ</a> tài-khoản-ngân-hàng và tài-khoản-dịch-vụ-online, và cách chuyển-giao tài-sản-số lại cho người khác.
+          <p>Tìm-hiểu kỹ hơn về những loại tài-sản trong thời-đại số-hoá, những rủi-ro làm mất những tài-sản đó, và <a href="kinh-nghiem/may-tinh/protect">những cách bảo-vệ</a> tài-khoản-ngân-hàng và trương-mục-dịch-vụ-online, và cách chuyển-giao tài-sản-số lại cho người khác.
           </p>
         </div>
       </div>
@@ -381,35 +385,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">https://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
-
-<amp-analytics>
-  <script type="application/json">
-    {
-      "requests": {
-        "pageview": "https://c.statcounter.com/12598906/0/9a8e736a/1/"
-      },
-      "triggers": {
-        "trackPageview": {
-          "on": "visible",
-          "request": "pageview"
-        }
-      }
-    }
-  </script>
-</amp-analytics>
-<amp-analytics type="googleanalytics">
-  <script type="application/json">
-  {
-  "vars": { "account": "UA-25268996-1" },
-  "triggers": {
-  "trackPageview": {
-  "on": "visible",
-  "request": "pageview"
-    }
-   }
-  }
-  </script>
-</amp-analytics>
 
 </main>
 </body>
