--- a/kinh-nghiem/may-tinh/index.html
+++ b/kinh-nghiem/may-tinh/index.html
@@ -102,18 +102,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -187,7 +191,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h1>Những kinh-nghiệm khi dùng máy-tính, điện-thoại</h1>
 <dl>
   <dt><a href='protect'>Bảo-vệ tài-sản-số-hoá</a></dt>
-  <dd>Bảo vệ tài sản trong thời đại số hoá: tránh hư hoặc mất các file, tránh lộ hoặc quên các password, bảo vệ các tài khoản bằng nhiều yếu tố.</dd>
+  <dd>Bảo vệ tài sản trong thời đại số hoá: tránh hư hoặc mất các file, tránh lộ hoặc quên các password, bảo vệ các trương-mục bằng nhiều yếu tố.</dd>
   <dt><a href="sec-digit-life">Bảo-vệ đời-sống của bạn trong không-gian-số</a></dt>
   <dd>Dịch từ bài viết hai phần của Sean Gallagher về những cách giữ an-toàn trong không-gian-số.</dd>
   <dt><a href='cloudstorage'>Kinh-nghiệm dùng cloud storage</a></dt>
@@ -214,8 +218,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <dd>Nhắn tin miễn phí với RCS, những ưu điểm của RCS, cách cài đặt vào máy.</dd>
   <dt><a href='conferencecall'>Conference Call</a></dt>
   <dd>Dịch vụ điện thoại hội nghị (Conference Call) của mạng điện thoại di động, 50 người nói chuyện với nhau cùng lúc</dd>
-  <dt><a href='tai-khoan-google'>Tạo tài-khoản Google</a></dt>
-  <dd>Cách tạo tài khoản Google với các địa chỉ mail không phải gmail</dd>
+  <dt><a href='tai-khoan-google'>Tạo trương-mục Google</a></dt>
+  <dd>Cách tạo trương-mục Google với các địa chỉ mail không phải gmail</dd>
   <dt><a href='googlemaps'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a></dt>
   <dd>Vận dụng các khả năng của Google Maps app để việc đi lại nhanh chóng và chính xác</dd>
   <dt><a href='spam-call'>Chặn những cuộc-gọi-tiếp-thị</a></dt>
