--- a/kinh-nghiem/may-tinh/sec-digit-life.html
+++ b/kinh-nghiem/may-tinh/sec-digit-life.html
@@ -105,18 +105,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -218,7 +222,7 @@ Nội-dung:
 </ul>
 
 <h2>Giảm bề-mặt bị tấn-công của bạn</h2>
-<p>Câu-hỏi đầu-tiên ở trên là về việc liệt-kê mọi-thứ của đời-sống trong không-gian-số của bạn mà có-thể bị khai-thác bởi bọn tội-phạm (hay một công-ty, một cá-nhân bất-lương) gây thiệt-hại cho bạn. Một danh-sách điển-hình gồm có điện-thoại, các thiết-bị di-động, máy-tính cá-nhân, mạng máy-tính gia-đình, tài-khoản mạng-xã-hội, tài-khoản ngân-hàng online, thẻ tín-dụng, và danh-tính của bạn. Chúng-tôi sẽ đề-cập vài thứ ở đây, phần còn-lại sẽ được đề-cập trong <a href="#part2">phần hai</a>.</p>
+<p>Câu-hỏi đầu-tiên ở trên là về việc liệt-kê mọi-thứ của đời-sống trong không-gian-số của bạn mà có-thể bị khai-thác bởi bọn tội-phạm (hay một công-ty, một cá-nhân bất-lương) gây thiệt-hại cho bạn. Một danh-sách điển-hình gồm có điện-thoại, các thiết-bị di-động, máy-tính cá-nhân, mạng máy-tính gia-đình, trương-mục mạng-xã-hội, tài-khoản ngân-hàng online, thẻ tín-dụng, và danh-tính của bạn. Chúng-tôi sẽ đề-cập vài thứ ở đây, phần còn-lại sẽ được đề-cập trong <a href="#part2">phần hai</a>.</p>
 <p>Mỗi món trong danh-sách trên là một bề-mặt bị tấn-công—một cơ-hội cho một ai-đó khai-thác ra thông-tin của riêng bạn. Diện-tích bị tấn-công lớn hay nhỏ phụ-thuộc vào nhiều yếu-tố, bạn có thể dùng vài biện-pháp căn-bản để giảm cơ-hội bị-hại.</p>
 
 <h2>Những mối-đe-doạ đến máy-điện-thoại</h2>
@@ -256,26 +260,26 @@ Nội-dung:
 
 <div class="tblue"><p id="part2"><b>Phần hai</b></p></div>
 <p>Trong phần trên, tôi đã đề-cập những điều-cơ-bản của việc đánh-giá những rủi-ro trong không-gian-số và những cách-bảo-vệ trong tầm-tay của bạn: những thiết-bị của bạn. Nhưng những thiết-bị bạn dùng chỉ là một phần của những gì bạn lộ ra trong không-gian-số.</p>
-<p>Theo một <a href="https://www.giact.com/aite-report-us-identity-theft-the-stark-reality/" target='_blank'>báo-cáo</a> của Aite Group, gần một nửa số người-tiêu-dùng Mỹ đã bị trộm danh-tính trong hai năm qua. Những thiệt-hại trong năm 2021 từ việc trộm đó được tính ra khoảng 721,3 tỷ Mỹ-kim—chỉ tính riêng những vụ chiếm-đoạt tài-khoản online. Những phần đáng-giá khác của bạn trong không-gian-số có-thể không đem rủi-ro về tiền đến với bạn nhưng vẫn có-thể có tác-động rõ-ràng đến sự-riêng-tư, sự-an-toàn và tổng-thể sức-khoẻ tài-chính.</p>
-<p>Trường-hợp cụ-thể: Tháng-Chín vừa-qua, tài-khoản Twitter của tôi bị một hacker tấn-công nhằm chiếm-đoạt. Mặc-dù tôi đã thực-hiện nhiều biện-pháp để ngăn tài-khoản của tôi bị trộm (gồm có xác-thực hai yếu-tố), kẻ-tấn-công đã làm cho tôi không-thể login (mặc-dù chúng cũng không thể). Tôi đã phải tốn vài tuần và vài lần liên-lạc với cấp cao ở Twitter để khôi-phục tài-khoản. Là một người mà cách-kiếm-tiền gắn với tài-khoản Twitter đã được xác-minh, vụ-tấn-công này không chỉ là sự-bất-tiện mà thật-sự làm rối-loạn công-việc của tôi.</p>
-<p>Kẻ-tấn-công đã tìm được địa-chỉ email liên-kết với tài-khoản Twitter của tôi qua một vụ ăn-cắp thông-tin ở một dịch-vụ mà tôi đã từng liên-kết với tài-khoản Twitter. Không có thiệt-hại về tiền nhưng nó đã làm tôi nhìn kỹ lại cách tôi bảo vệ tài-khoản online của mình.</p>
+<p>Theo một <a href="https://www.giact.com/aite-report-us-identity-theft-the-stark-reality/" target='_blank'>báo-cáo</a> của Aite Group, gần một nửa số người-tiêu-dùng Mỹ đã bị trộm danh-tính trong hai năm qua. Những thiệt-hại trong năm 2021 từ việc trộm đó được tính ra khoảng 721,3 tỷ Mỹ-kim—chỉ tính riêng những vụ chiếm-đoạt trương-mục online. Những phần đáng-giá khác của bạn trong không-gian-số có-thể không đem rủi-ro về tiền đến với bạn nhưng vẫn có-thể có tác-động rõ-ràng đến sự-riêng-tư, sự-an-toàn và tổng-thể sức-khoẻ tài-chính.</p>
+<p>Trường-hợp cụ-thể: Tháng-Chín vừa-qua, trương-mục Twitter của tôi bị một hacker tấn-công nhằm chiếm-đoạt. Mặc-dù tôi đã thực-hiện nhiều biện-pháp để ngăn trương-mục của tôi bị trộm (gồm có xác-thực hai yếu-tố), kẻ-tấn-công đã làm cho tôi không-thể login (mặc-dù chúng cũng không thể). Tôi đã phải tốn vài tuần và vài lần liên-lạc với cấp cao ở Twitter để khôi-phục trương-mục. Là một người mà cách-kiếm-tiền gắn với trương-mục Twitter đã được xác-minh, vụ-tấn-công này không chỉ là sự-bất-tiện mà thật-sự làm rối-loạn công-việc của tôi.</p>
+<p>Kẻ-tấn-công đã tìm được địa-chỉ email liên-kết với trương-mục Twitter của tôi qua một vụ ăn-cắp thông-tin ở một dịch-vụ mà tôi đã từng liên-kết với trương-mục Twitter. Không có thiệt-hại về tiền nhưng nó đã làm tôi nhìn kỹ lại cách tôi bảo vệ trương-mục online của mình.</p>
 <p>Một-số rủi-ro với đời-sống trong không-gian-số của bạn lại nằm ở các nhà-cung-cấp-dịch-vụ nơi mà trực-tiếp bị tác-động bởi kẻ-gian nhiều hơn bạn. Ví-dụ các công-ty thẻ-tín-dụng đã đầu-tư rất nhiều vào việc phát-hiện gian-lận bởi-vì việc-kinh-doanh của họ được xây trên việc giảm-thiểu rủi-ro của những giao-dịch tài-chính. Nhưng các tổ-chức khác cũng giữ danh-tính cá-nhân của bạn thì không đủ mạnh trong việc chống gian-lận như-vậy.</p>
 
-<h2>Mọi việc dựa trên nhiều tài-khoản</h2>
-<p>Có vài việc bạn có-thể làm để giảm những rủi-ro đặt-ra bởi việc ăn-cắp thông-tin (ở các nhà-cung-cấp dịch-vụ). Việc đầu-tiên là tránh để lộ thông-tin chứng-thực (tên-tài-khoản và mật-khẩu) của bạn. Việc ăn-cắp thông-tin ở nhà-cung-cấp dịch-vụ đặc-biệt nguy-hiểm nếu bạn đã không áp-dụng các biện-pháp kỹ-lưỡng khi tạo thông-tin chứng-thực. Các biện-pháp đó là:</p>
+<h2>Mọi việc dựa trên nhiều trương-mục</h2>
+<p>Có vài việc bạn có-thể làm để giảm những rủi-ro đặt-ra bởi việc ăn-cắp thông-tin (ở các nhà-cung-cấp dịch-vụ). Việc đầu-tiên là tránh để lộ thông-tin chứng-thực (tên-trương-mục và mật-khẩu) của bạn. Việc ăn-cắp thông-tin ở nhà-cung-cấp dịch-vụ đặc-biệt nguy-hiểm nếu bạn đã không áp-dụng các biện-pháp kỹ-lưỡng khi tạo thông-tin chứng-thực. Các biện-pháp đó là:</p>
 <ul>
 <li>Dùng một phần-mềm quản-lý mật-khẩu để tạo ra những mật-khẩu mạnh mà bạn không cần phải nhớ. Phần-mềm quản-lý mật-khẩu đã có sẵn trong các browser thông dụng: Chrome, Firefox. Bạn cũng có-thể dùng phần-mềm quản-lý mật-khẩu riêng rẽ (ví-dụ <a href="protect#password">KeePass</a>). Với phần-mềm quản-lý mật-khẩu, bạn tạo những mật-khẩu khác nhau cho những dịch-vụ khác nhau, như-vậy khi thông-tin chứng-thực bị ăn-cắp ở một nhà-cung-cấp dịch-vụ sẽ không dùng được ở các nhà-cung-cấp dịch-vụ khác.</li>
 <li>Khi có-thể được, dùng cách-xác-thực hai yếu-tố hoặc hơn nữa (2FA hoặc MFA). Việc này kết-hợp mật-khẩu với một thứ từ một nơi không phải web browser hoặc app đang dùng. Cách-xác-thực hai yếu-tố làm cho kẻ-gian không-thể log-in vào dịch-vụ với thông-tin ăn-cắp được. Nếu có-thể được thì tránh dùng 2FA qua SMS vì kẻ-gian có thể nhận được SMS của bạn. Hãy dùng những app như Authy, Duo, Google Authenticator, hoặc Microsoft Authenticator, chúng có-thể được dùng với nhiều dịch-vụ web khác nhau. Bạn cũng có-thể dùng một phần-cứng như YubiKey.</li>
-<li>Dùng một địa-chỉ email khác cho những tài-khoản dịch-vụ có giá-trị cao. Như-vậy kẻ-gian không-thể log-in vào dịch-vụ giá-trị cao với thông-tin ăn-cắp được từ các dịch-vụ thường. Bạn có-thể tạo nhiều email alias, mỗi alias để dùng cho từng dịch-vụ khác nhau; như-vậy bạn sẽ biết ngay đã bị ăn-cắp thông-tin từ nhà-cung-cấp dịch-vụ nào khi thấy spam mail gửi đến alias nào.</li>
+<li>Dùng một địa-chỉ email khác cho những trương-mục dịch-vụ có giá-trị cao. Như-vậy kẻ-gian không-thể log-in vào dịch-vụ giá-trị cao với thông-tin ăn-cắp được từ các dịch-vụ thường. Bạn có-thể tạo nhiều email alias, mỗi alias để dùng cho từng dịch-vụ khác nhau; như-vậy bạn sẽ biết ngay đã bị ăn-cắp thông-tin từ nhà-cung-cấp dịch-vụ nào khi thấy spam mail gửi đến alias nào.</li>
 <li>Hãy dùng các dịch-vụ kiểm-tra địa-chỉ email nào của bạn đã bị ăn-cắp. Chrome hay Firefox có dịch-vụ này. Bạn cũng có-thể kiểm-tra ở <a href="haveIbeenpwned.com" target='_blank'>haveIbeenpwned.com</a>.</li>
 </ul>
 
 <h2>Khi 2FA vẫn chưa đủ</h2>
-<p>Những biện-pháp bảo-vệ luôn thay-đổi. Tôi nhận-ra điều-đó khi tài-khoản Twitter của tôi đã có 2FA nhưng vẫn không đủ—có một biện-pháp nữa gọi là “bảo-vệ mật-khẩu”, nó sẽ không cho đổi mật-khẩu nếu không có sự xác-nhận qua email. Gửi yêu-cầu đổi mật-khẩu và đổi địa-chỉ email làm cho 2FA bị mất tác-dụng và đổi mật-khẩu. May-mắn là tài-khoản bị khoá sau nhiều lần gửi yêu-cầu và kẻ-gian không thể chiếm được.</p>
-<p>Đây là một ví-dụ về tình-huống những biện-pháp giảm nhẹ rủi-ro bình-thường không có tác-dụng cộng: dùng nhiều biện-pháp vẫn không đem lại sự bảo-vệ. Trong trường-hợp này tôi bị tấn-công vì tài-khoản của tôi đã được xác-minh, có giá-trị.</p>
+<p>Những biện-pháp bảo-vệ luôn thay-đổi. Tôi nhận-ra điều-đó khi trương-mục Twitter của tôi đã có 2FA nhưng vẫn không đủ—có một biện-pháp nữa gọi là “bảo-vệ mật-khẩu”, nó sẽ không cho đổi mật-khẩu nếu không có sự xác-nhận qua email. Gửi yêu-cầu đổi mật-khẩu và đổi địa-chỉ email làm cho 2FA bị mất tác-dụng và đổi mật-khẩu. May-mắn là trương-mục bị khoá sau nhiều lần gửi yêu-cầu và kẻ-gian không thể chiếm được.</p>
+<p>Đây là một ví-dụ về tình-huống những biện-pháp giảm nhẹ rủi-ro bình-thường không có tác-dụng cộng: dùng nhiều biện-pháp vẫn không đem lại sự bảo-vệ. Trong trường-hợp này tôi bị tấn-công vì trương-mục của tôi đã được xác-minh, có giá-trị.</p>
 
 <h2>Những rủi-ro trong mạng-xã-hội</h2>
-<p>Những mạng-xã-hội, cộng-đồng online, app hay dịch-vụ để tương-tác là những nguồn thông-tin dùng để tấn-công có chủ-đích. Những tài-khoản mạng-xã-hội là những mục-tiêu bị chiếm, và nó chứa những thông-tin quan-trọng về người-dùng, gia-đình họ, bạn họ, những hoạt-động hoặc thậm-chí là tài-sản. Nếu bạn dùng mạng-xã-hội, hãy dùng các cách sau để bớt lộ ra trong mạng-xã-hội:</p>
+<p>Những mạng-xã-hội, cộng-đồng online, app hay dịch-vụ để tương-tác là những nguồn thông-tin dùng để tấn-công có chủ-đích. Những trương-mục mạng-xã-hội là những mục-tiêu bị chiếm, và nó chứa những thông-tin quan-trọng về người-dùng, gia-đình họ, bạn họ, những hoạt-động hoặc thậm-chí là tài-sản. Nếu bạn dùng mạng-xã-hội, hãy dùng các cách sau để bớt lộ ra trong mạng-xã-hội:</p>
 <ul>
 <li>Phải luôn-luôn xoá bớt thông-tin trong hình các loại thẻ trước khi gửi.</li>
 <li>Phải dùng mật-khẩu mạnh và 2FA.</li>
