--- a/kinh-nghiem/may-tinh/tai-khoan-google.html
+++ b/kinh-nghiem/may-tinh/tai-khoan-google.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tạo tài khoản Google</title>
-<meta name="description" content="Cách tạo tài khoản Google với các địa chỉ mail không phải gmail" />
-<meta name="keywords" content="hữu ích, tài khoản, Google">
+<title>Tạo trương-mục Google</title>
+<meta name="description" content="Cách tạo trương-mục Google với các địa chỉ mail không phải gmail" />
+<meta name="keywords" content="hữu ích, trương-mục, Google">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/tai-khoan-google">
 
 <!-- in head of html file -->
@@ -105,18 +105,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -188,10 +192,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <amp-social-share type="email" height="32"></amp-social-share>
   </div>
 
-  <h1>Tạo tài khoản Google</h1>
-<p>Google là một phần quan trọng trong Internet hiện nay. Google cung cấp rất nhiều dịch vụ miễn phí trên Internet, như là: tìm, thư, chat, soạn-giữ-chia sẻ tài liệu-hình-âm thanh-video, sổ địa chỉ, lịch làm việc… Đặc biệt là với thiết bị di động Android thì hầu như bạn có mọi thông tin bên mình ở mọi nơi.</p>
+  <h1>Tạo trương-mục Google</h1>
+<p>Google là một phần quan trọng trong Internet hiện nay. Google cung cấp rất nhiều dịch vụ miễn phí trên Internet, như là: tìm, thư, chat, soạn-giữ-chia sẻ tài-liệu-hình-âm thanh-video, sổ địa chỉ, lịch làm việc… Đặc biệt là với thiết bị di động Android thì hầu như bạn có mọi thông tin bên mình ở mọi nơi.</p>
 <p>Một dịch vụ miễn phí rất tốt của Google là Google Drive. Google Drive cho phép tạo ra, upload, sửa, chia sẻ tới 15 GB các loại file văn bản, bảng tính, trình bày, pdf, hình, âm thanh… Thay vì gửi file cho đối tác xem, bạn có thể để file trong Google Drive và gửi link cho đối tác. Bạn cũng có thể cho phép đối tác sửa vào file, có thể xem lại các bản cũ hơn của file… Công cụ <a href="/huu-ich/ke-hoach-tai-chinh/" target="_blank">Kế hoạch tài chính</a> được soạn để dùng với Google Drive.
-<br>Để dùng Google Drive và nhiều dịch vụ khác của Google, bạn cần một tài khoản Google. Thông thường tài khoản Google được tạo ra khi bạn dùng GMail lần đầu. Nếu bạn đang dùng và hài lòng với một dịch vụ thư khác, ví dụ như Yahoo, bạn không muốn có thêm một hộp thư trong GMail, bạn vẫn có thể có một tài khoản Google gắn với hộp thư điện tử đang dùng. Sau đây là cách tạo tài khoản Google gắn với hộp thư Yahoo.</p>
+<br>Để dùng Google Drive và nhiều dịch vụ khác của Google, bạn cần một trương-mục Google. Thông thường trương-mục Google được tạo ra khi bạn dùng GMail lần đầu. Nếu bạn đang dùng và hài lòng với một dịch vụ thư khác, ví dụ như Yahoo, bạn không muốn có thêm một hộp thư trong GMail, bạn vẫn có thể có một trương-mục Google gắn với hộp thư điện tử đang dùng. Sau đây là cách tạo trương-mục Google gắn với hộp thư Yahoo.</p>
 <h2>Bước 1: Đăng ký</h2>
 <p>Mở trang web www.google.com trong web browser (Chrome, Firefox, Internet Explorer, Safari), bạn sẽ thấy tương tự như hình 1</p>
 <div><amp-img alt="Hình 1" src="/images/Google0127b5.png" width="719" height="440" layout="responsive"></amp-img></div>
@@ -200,8 +204,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <p>Bấm vào chữ Create an account, bạn sẽ thấy tương tự như hình 3</p>
 <div><amp-img alt="Hình 3" src="/images/Google0327b5.png" width="719" height="537" layout="responsive"></amp-img></div>
 <p>Gõ tên và họ của bạn vào ô <b>Name</b>, bấm vào chữ I prefer to use my current email address, rồi gõ địa chỉ email bạn đang dùng vào ô <b>Choose your username</b>,
-<br>Tiếp tục gõ password vào hai ô <b>Create a password</b> và <b>Confirm your password</b>, hãy nhớ password này để có thể dùng tài khoản Google,
-<br>Gõ ngày-tháng-năm sinh, giới tính, số điện thoại di động vào. Bạn nên dùng thông tin thật, để khi bạn quên password thì có thể được nhắc dễ dàng. Khi bạn cất nhiều tài liệu cần thiết trong Google Drive mà quên mất password thì thật là phiền. Đừng sợ lộ thông tin cá nhân, Google không đem bán cho người khác. Nhiều người gõ những thông tin không đúng, đến khi bị hỏi lại thì không nhớ, đành chịu mất password!</p>
+<br>Tiếp tục gõ password vào hai ô <b>Create a password</b> và <b>Confirm your password</b>, hãy nhớ password này để có thể dùng trương-mục Google,
+<br>Gõ ngày-tháng-năm sinh, giới tính, số điện thoại di động vào. Bạn nên dùng thông tin thật, để khi bạn quên password thì có thể được nhắc dễ dàng. Khi bạn cất nhiều tài-liệu cần thiết trong Google Drive mà quên mất password thì thật là phiền. Đừng sợ lộ thông tin cá nhân, Google không đem bán cho người khác. Nhiều người gõ những thông tin không đúng, đến khi bị hỏi lại thì không nhớ, đành chịu mất password!</p>
 <div><amp-img alt="Hình 4" src="/images/Google0427b5.png" width="720" height="611" layout="responsive"></amp-img></div>
 <p>Gõ dãy số kiểm tra vào ô <b>Type the text</b>,
 <br>Đánh dấu vào ô I agree to the Google Terms of Service and Privacy Policy (nếu bạn cẩn thận thì đọc luôn hai trang điều khoản đó)
@@ -214,7 +218,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <br>Nếu bạn không dùng địa chỉ email ở Yahoo, bạn bấm vào chữ Request a verification email. Sau đó mở chương trình mail ra, đọc và làm theo hướng dẫn trong thư gửi từ Google.
 <br>Nếu đó là địa chỉ email ở Yahoo, bạn bấm vào chữ <b>Verify now</b>, bạn sẽ thấy trang web login Yahoo như hình 6.</p>
 <div><amp-img alt="Hình 6" src="/images/Google06.png" width="502" height="706" layout="responsive"></amp-img></div>
-<p>Gõ Yahoo ID và password của Yahoo account đó, bấm <b>Sign in</b>, sẽ thấy tương tự hình 7. Bấm Agree để bắt đầu dùng tài khoản Google.</p>
+<p>Gõ Yahoo ID và password của Yahoo account đó, bấm <b>Sign in</b>, sẽ thấy tương tự hình 7. Bấm Agree để bắt đầu dùng trương-mục Google.</p>
 <div><amp-img alt="Hình 7" src="/images/Google07.png" width="502" height="704" layout="responsive"></amp-img></div>
 <p>Bất cứ khi nào dùng các dịch vụ của Google, bạn hãy nhìn lên góc trên bên phải của browser xem có thấy địa chỉ email hay là chữ <b>Sign in / Đăng nhập</b>. Hãy bấm vào <b>Sign in / Đăng nhập</b> để dùng được mọi dịch vụ.</p>
   <div class="todiscuss">
