--- a/kinh-nghiem/may-tinh/protect.html
+++ b/kinh-nghiem/may-tinh/protect.html
@@ -2,7 +2,7 @@
 <html amp lang="vi">
 <head>
 <title>Cách bảo vệ tài sản trong thời đại số hoá</title>
-<meta name="description" content="Bảo vệ tài sản trong thời đại số hoá: tránh hư hoặc mất các file, tránh lộ hoặc quên các password, bảo vệ các tài khoản bằng nhiều yếu tố." />
+<meta name="description" content="Bảo vệ tài sản trong thời đại số hoá: tránh hư hoặc mất các file, tránh lộ hoặc quên các password, bảo vệ các trương-mục bằng nhiều yếu tố." />
 <meta name="keywords" content="hữu ích, ngân hàng, cá nhân, password, OTP, 2FA">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/protect">
 
@@ -105,18 +105,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
+  .portimg { width:100%; }
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
+  .portimg { margin: auto; width:45%; }
 
 }
 
@@ -272,8 +276,8 @@ Dàn bài:
 </ul>
 <p>Để tránh bị lừa thì bạn hãy bình tĩnh đọc kỹ những thông báo nhận được, và tránh cài những phần mềm không rõ nguồn gốc (phần mềm đã crack), cân nhắc cẩn thận khi mở những file đính kèm email.
 <br>Bạn cũng nên nhớ rằng <b>không bao giờ</b> gõ password của mình ở máy của người khác. Lý do là bạn không thể biết chắc rằng máy đó không có malware trộm password. Khi tôi cần dùng máy ở tiệm in, tôi luôn luôn chuẩn bị sẵn những thứ cần in thành các file pdf, và để các file đó trong một <a href="cloudstorage">cloud storage</a> mà không cần password.</p>
-<p>Một trường hợp bị mất password khác là server dịch vụ bị hacker xâm nhập và lấy hàng loạt thông tin người dùng, bao gồm tên tài khoản, địa chỉ email, password… Bạn có thể đến trang web <a href="https://haveibeenpwned.com/" target='_blank'>have i been pwned?</a> dò xem những địa chỉ email nào của bạn đã bị lộ tại những dịch vụ nào.</p>
-<p>Và bạn hãy luôn luôn dùng lớp bảo vệ thứ hai (được giải thích <a href="#twofactor">dưới đây</a>) để khỏi bị mất tài khoản khi password đã bị trộm mất.</p>
+<p>Một trường hợp bị mất password khác là server dịch vụ bị hacker xâm nhập và lấy hàng loạt thông tin người dùng, bao gồm tên trương-mục, địa chỉ e-mail, password… Bạn có thể đến trang web <a href="https://haveibeenpwned.com/" target='_blank'>have i been pwned?</a> dò xem những địa chỉ email nào của bạn đã bị lộ tại những dịch vụ nào.</p>
+<p>Và bạn hãy luôn luôn dùng lớp bảo vệ thứ hai (được giải thích <a href="#twofactor">dưới đây</a>) để khỏi bị mất trương-mục khi password đã bị trộm mất.</p>
 
 <h3>Password ở những chỗ khác</h3>
 Ngoài việc dùng password để login vào các dịch vụ web, password còn được dùng ở nhiều chỗ khác nữa:
@@ -290,7 +294,7 @@ Ngoài việc dùng password để login vào các dịch vụ web, password cò
 
 
 <h2 id="twofactor">Bảo vệ hai lớp (Two Factor Authentication)</h2>
-<p>Một số dịch vụ tăng mức độ bảo vệ lên bằng cách dùng thêm password thứ hai, sau khi server đã nhận được password thứ nhất đúng rồi, nó hỏi thêm password thứ hai để chắc chắn rằng người trả lời thật sự là chủ tài khoản, <i>không những <b>biết</b> password mà còn đang <b>giữ</b> một vật của riêng chủ tài khoản</i>. Password thứ hai thay đổi liên tục theo thời gian và mỗi password chỉ có hiệu lực trong vài phút, nó gọi là One Time Password. Có hai cách để có OTP mà gõ vào.</p>
+<p>Một số dịch vụ tăng mức độ bảo vệ lên bằng cách dùng thêm password thứ hai, sau khi server đã nhận được password thứ nhất đúng rồi, nó hỏi thêm password thứ hai để chắc chắn rằng người trả lời thật sự là chủ trương-mục, <i>không những <b>biết</b> password mà còn đang <b>giữ</b> một vật của riêng chủ trương-mục</i>. Password thứ hai thay đổi liên tục theo thời gian và mỗi password chỉ có hiệu lực trong vài phút, nó gọi là One Time Password. Có hai cách để có OTP mà gõ vào.</p>
 
 <h3>Nhận OTP qua SMS</h3>
 <p>Sau khi nhận được password thứ nhất đúng, server sẽ gửi cho user một OTP qua SMS đến một số điện thoại di động của user.
@@ -307,11 +311,11 @@ Ngoài việc dùng password để login vào các dịch vụ web, password cò
 <p>Ở mức độ an toàn hơn password và  OTP, các server yêu cầu người dùng chứng tỏ không giả mạo bằng một vật không thể sao chép được, ví dụ như vân tay hay <a href="https://fidoalliance.org/how-fido-works/" target='_blank'>authenticator</a> (security key, chìa khoá an ninh kỹ thuật số). Khi dùng phương pháp xác thực này thì password không còn cần thiết nữa.
 <br>Phần mềm của dịch vụ sẽ liên lạc với đầu đọc vân tay (có sẵn trong máy hoặc nối với máy tính qua USB hoặc Bluetooth) để đọc vân tay của người dùng trước khi bắt đầu giao dịch.</p>
 <div class="flright"><div class="right">Hình từ <a href="https://www.theverge.com/2019/2/22/18235173/the-best-hardware-security-keys-yubico-titan-key-u2f" target='_blank'>TheVerge.com</a></div><amp-img alt="Fido keys" src="/images/fidokey.png" width="452" height="254" layout="responsive"></amp-img></div>
-<p>Authenticator là một máy mã hoá nhỏ như cái móng tay. Nó chứa chìa khoá riêng (private key) của người dùng trong cặp chìa khoá public-key cryptography đã đăng ký với server của dịch vụ. Mỗi khi người dùng login vào dịch vụ thì server dịch vụ gửi đến máy của người dùng một chuỗi thử thách (challenge), máy của người dùng giao chuỗi thử thách đó cho authenticator qua USB hoặc NFC hoặc Bluetooth, authenticator <a href="cryptocurrency">ký</a> chuỗi thử thách bằng private key rồi gửi trở lại server, server dùng public key của người dùng để kiểm xem chữ ký đó có khớp không. Private key của người dùng không bao giờ xuất hiện bên ngoài authenticator nên không sợ bị lộ. Authenticator có thể chứa vô số private key nên một người dùng với một authenticator có thể tạo tài khoản ở vô số dịch vụ, nhiều tài khoản ở cùng một dịch vụ. Authenticator đang dần trở nên phổ biến, đến một lúc nào đó người ta không cần password ở mọi nơi.
-<br>Biện pháp này chặt chẽ như vậy nhưng cũng không bảo vệ tuyệt đối được. Đã có trường hợp trong khi ngủ chủ tài khoản bị người cùng nhà dùng đầu ngón tay để thực hiện giao dịch chuyển tiền đi mất. Trong trường hợp không tin tưởng người cùng nhà thì nên tắt hoặc cất smartphone vào trong két sắt khi đi ngủ.</p>
+<p>Authenticator là một máy mã hoá nhỏ như cái móng tay. Nó chứa chìa khoá riêng (private key) của người dùng trong cặp chìa khoá public-key cryptography đã đăng ký với server của dịch vụ. Mỗi khi người dùng login vào dịch vụ thì server dịch vụ gửi đến máy của người dùng một chuỗi thử thách (challenge), máy của người dùng giao chuỗi thử thách đó cho authenticator qua USB hoặc NFC hoặc Bluetooth, authenticator <a href="cryptocurrency">ký</a> chuỗi thử thách bằng private key rồi gửi trở lại server, server dùng public key của người dùng để kiểm xem chữ ký đó có khớp không. Private key của người dùng không bao giờ xuất hiện bên ngoài authenticator nên không sợ bị lộ. Authenticator có thể chứa vô số private key nên một người dùng với một authenticator có thể tạo trương-mục ở vô số dịch vụ, nhiều trương-mục ở cùng một dịch vụ. Authenticator đang dần trở nên phổ biến, đến một lúc nào đó người ta không cần password ở mọi nơi.
+<br>Biện pháp này chặt chẽ như vậy nhưng cũng không bảo vệ tuyệt đối được. Đã có trường hợp trong khi ngủ, chủ tài khoản bị người cùng nhà dùng đầu ngón tay để thực hiện giao dịch chuyển tiền đi mất. Trong trường hợp không tin tưởng người cùng nhà thì nên tắt hoặc cất smartphone vào trong két sắt khi đi ngủ.</p>
 
 <h2 id="dsign">Digital Signing</h2>
-<p>Trong phần trên, chúng ta được biết authenticator hay security key chứa những cặp chìa khoá public-key cryptography của những tài khoản ở các nhà cung cấp dịch vụ, và authenticator sẽ ký chuỗi thử thách để người-dùng được login vào dịch vụ, gọi là xác thực danh tính, authentication.</p>
+<p>Trong phần trên, chúng ta được biết authenticator hay security key chứa những cặp chìa khoá public-key cryptography của những trương-mục ở các nhà cung cấp dịch vụ, và authenticator sẽ ký chuỗi thử thách để người-dùng được login vào dịch vụ, gọi là xác thực danh tính, authentication.</p>
 <p>Cặp chìa khoá public-key cryptography còn được dùng để ký các chứng từ giao dịch, ví dụ file hợp đồng, file biên bản… Đó là ứng dụng chữ ký số. Mỗi người đều có thể tự dùng software để tạo ra cặp chìa khoá public-key cryptography, nhưng muốn cho chữ ký số được công nhận có giá trị thì phải mua từ các nhà cung cấp dịch vụ chữ ký số được cấp phép từ chính quyền và phải trả tiền hàng năm. Chữ ký số thường chứa trong một USB token hoặc chứa trong SIM điện thoại di động. Khi ký văn bản thì phần mềm ký sẽ tạo ra chuỗi hash từ văn bản, giao chuỗi hash cho USB token hoặc SIM điện thoại ký.</p>
 <p>Gần đây có một cách ký gọn hơn, đó là Remote Signing, ký trên smartphone. Khi cần ký, phần mềm ký sẽ tạo ra chuỗi hash từ văn bản, gửi chuỗi hash đó đến server của nhà cung cấp dịch vụ chữ ký số, server sẽ hỏi người giữ chữ ký qua smartphone, chủ smartphone đồng ý hoặc từ chối ký với server, server gửi kết quả trở lại cho phần mềm ký.</p>
 <p>Việc dùng chữ ký số đã rất phổ biến ở các doanh nghiệp Việt Nam vì các giấy tờ khai thuế và khai hải quan đều phải có chữ ký số để nộp qua mạng. Cá nhân thì không có nhu cầu dùng chữ ký số.</p>
@@ -324,7 +328,7 @@ Ngoài việc dùng password để login vào các dịch vụ web, password cò
 <p>Những tài sản có một giá trị nào đó (vật chất hay tinh thần) đều cần phải được truyền lại khi người chủ tài sản qua đời, không nên để bị quên lãng giống như những trường hợp chôn vàng dưới nền nhà mà người nhà không biết.
 <br>Người chôn vàng dưới nền nhà nên viết rõ chỗ chôn vào di chúc. Di chúc được niêm phong và cất cẩn thận, người thân sẽ mở di chúc sau khi người viết qua đời.
 <br>Với tài sản số hoá thì viết vào di chúc như thế nào? Viết tên và password lên giấy rồi niêm phong lại ư? Mỗi khi có một password cần phải đổi thì lại phải chép lại di chúc sao? Mất công quá, hãy làm di chúc số!
-<br>Google có một khả năng gọi là Inactive Account Manager rất tiện cho việc để lại tài sản số hoá. Khi Google thấy bạn không dùng tài khoản của bạn từ ba tháng trở lên, Inactive Account Manager sẽ gửi một email báo cho một vài người thân mà bạn đã chọn sẵn và cho những người đó dùng một vài loại tài sản số hoá mà bạn đang để trong Google. </p>
+<br>Google có một khả năng gọi là Inactive Account Manager rất tiện cho việc để lại tài sản số hoá. Khi Google thấy bạn không dùng trương-mục của bạn từ ba tháng trở lên, Inactive Account Manager sẽ gửi một email báo cho một vài người thân mà bạn đã chọn sẵn và cho những người đó dùng một vài loại tài sản số hoá mà bạn đang để trong Google. </p>
 <p>Còn tài sản số hoá trong những dịch vụ khác thì làm sao để truyền lại? Tôi sẽ dùng Inactive Account Manager bắc cầu qua dịch vụ cloud storage để truyền lại tất cả tài sản số hoá như sau:</p>
 <ul>
 <li>Để trong Google Drive một file chứa link chỉ đến file KeePass trong một cloud storage server và password của file đó.</li>
