--- a/kinh-nghiem/may-tinh/cryptocurrency.html
+++ b/kinh-nghiem/may-tinh/cryptocurrency.html
@@ -314,7 +314,7 @@ Giao-dịch trên sàn thì tốn phí-giao-dịch, phí chuyển bitcoin vào v
 
 <h3 id="brave">Brave Rewards</h3>
 <p>Brave là một phần-mềm web browser với đặc-điểm cho phép bạn kiểm-soát việc xem quảng-cáo. Brave sẽ lọc bỏ phần-lớn quảng-cáo trong các trang web và đề-nghị bạn xem những quảng-cáo từ những nguồn chọn-lọc. Brave hiện ra một dòng tóm-tắt về quảng-cáo, bạn tự quyết-định xem hay không xem quảng-cáo đó. Điều khác nhau giữa Brave và các browser khác là tiền quảng-cáo được chia cho ba bên (Brave, chủ trang web, và người xem web) thay vì chỉ có hai bên. Khi xem một quảng-cáo, bạn được tặng một ít BAT—Basic Attention Token. BAT là token dựa trên blockchain Ethereum. BAT hiện đang có giá 23 cent Mỹ.</p>
-<p>Rất không-may là BAT chỉ được chuyển vào ví của người-dùng ở một trong hai sàn Uphold hoặc Gemini, nhưng hai sàn đó chưa chấp-nhận cho người Việt-Nam dùng. Khi chưa có ví ở hai sàn đó thì BAT nhận được chỉ dược dùng để tặng cho các website.</p>
+<p>Rất không-may là BAT chỉ được chuyển vào ví của người-dùng đã KYC ở một trong hai sàn Uphold hoặc Gemini, nhưng hai sàn đó chưa chấp-nhận cho người Việt-Nam dùng. Khi chưa có ví ở hai sàn đó thì BAT nhận được chỉ dược dùng để tặng cho các website. Các chủ website cũng phải qua KYC mới được nhận tiền tặng. Tôi đã thử gửi tiền tặng website <a href="https://wikipedia.org" target='_blank'>Wikipedia</a>.</p>
 
 <h3 id="pi">Pi Network—một loại tiền-điện-tử cho mọi người</h3>
 <p>Pi rất khác các loại tiền-điện-tử còn lại. Pi được xây-dựng để trở-thành phương-tiện trao-đổi hàng-hoá và dịch-vụ toàn-cầu. Khác với hai loại trên, Pi chưa hoàn-thiện nhưng giá-trị của Pi cao hơn.
